Fixed action menu spacing

--- a/frontend/src/components/SchedulePreview/SchedulePreview.module.css
+++ b/frontend/src/components/SchedulePreview/SchedulePreview.module.css
@@ -138,10 +138,11 @@
 
 .scheduleWithActions {
   display: flex;
-  gap: 0;
   position: relative;
   padding: 0;
   width: 100%;
+  /* Added margin to make room for the action menu */
+  margin-left: 44px;
 }
 
 .actionMenuContainer {
@@ -217,7 +218,7 @@
 
 @media (min-width: 769px) and (max-width: 1167px) {
   .scheduleWithActions {
-    margin-left: 44px;
+    /* Already has margin-left: 44px; in base styles */
     position: relative;
   }
 
@@ -230,10 +231,10 @@
 
   .actionMenuDropdown {
     position: absolute;
-    top: 0;
-    left: 100%;
-    margin-left: var(--spacing-2);
-    margin-top: 0;
+    top: 100%; /* Changed from top: 0 to top: 100% */
+    left: 0;   /* Changed from left: 100% to left: 0 */
+    margin-top: var(--spacing-2);
+    margin-left: 0;
   }
 
   @keyframes menuFadeIn {
@@ -252,10 +253,18 @@
 @media (max-width: 768px) {
   .container {
     padding: var(--spacing-2);
+    padding-left: var(--spacing-6);
   }
 
   .scheduleWrapper {
     overflow-x: auto;
+    margin-left: 10px;
+    position: relative;
+  }
+  
+  .scheduleWithActions {
+    position: relative;
+    margin-left: 0;
   }
 
   .scheduleContainer {
@@ -263,18 +272,15 @@
     min-height: 500px;
   }
   
-  .scheduleWithActions {
-    flex-direction: row;
-    align-items: flex-start;
-  }
-
   .actionMenuContainer {
-    position: relative;
-    left: 0;
-    margin-right: var(--spacing-2);
+    position: absolute;
+    left: -36px;
+    top: 0;
+    margin-right: 0;
   }
 
   .actionMenuDropdown {
+    position: absolute;
     left: 0;
     top: 100%;
     margin-left: 0;
